--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {},
