--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node connectionTest.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
