--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "lite-server": "^2.5.4"
+  },
   "scripts": {
     "test": "node connectionTest.js",
-    "start": "node index.js"
+    "start": "lite-server"
   },
   "repository": {
     "type": "git",
