--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "lite-server": "^2.5.4",
+    "nodemon": "^2.0.6"
   },
   "scripts": {
     "test": "node connectionTest.js",
