--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "lite-server": "^2.5.4",
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "test": "node connectionTest.js",
+    "test": "node Test/sequelizeTest.js",
     "start": "lite-server"
   },
   "repository": {
