--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "test": "node Test/sequelizeTest.js",
-    "start": "lite-server"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
